--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {background-color:black; font-family: arial; color: white}
 
-h1{color:black; font-family: verdana;}
+h1{color:grey; font-family: verdana;}
 
 .maindiv{
 	background-color: white; 
